syntax = 'proto3';

package tasks;

option java_package = 'org.minsait.tasks';
option java_multiple_files = true;

import 'google/protobuf/empty.proto';

message TaskMessage {
  string id = 1;
  string name = 2;
  string categoryId = 3;
}

message TaskId {
  string id = 1;
}

message CategoryId {
  string id = 1;
}

message TaskCount {
  int64 count = 1;
}

service TaskService {
  rpc createTask(TaskMessage) returns (TaskId);
  rpc updateTask(TaskMessage) returns (google.protobuf.Empty);
  rpc deleteTask(TaskId) returns (google.protobuf.Empty);
  rpc listTasks(google.protobuf.Empty) returns (stream TaskMessage);
  rpc countTasks(CategoryId) returns (TaskCount);
}
